# fission

./: .gitignore  .mcp.json  INSTALL.md  README.md  README_AI.md  pyproject.toml
docs/: cad-engine-candidates.md  eda-tool-candidates.md  recommended-stack.md
src/fission/: __init__.py  check.py  cli.py  export.py  mcp_server.py  schema.py
src/fission/case/: __init__.py  generator.py
src/fission/kicad/: __init__.py  parser.py
tests/: test_check.py  test_cli.py  test_export.py  test_generator.py  test_mcp_server.py  test_parser.py  test_schema.py
tests/fixtures/: sample.kicad_pcb
