[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fission"
version = "0.1.0"
description = "AI-native hardware design environment: schematic → PCB → enclosure"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "build123d>=0.7",
    "skidl>=2.0",
    "trimesh>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
fission = "fission.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fission"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
